--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul>
           <li><strong><a href="https://www.instagram.com/p/BhY8NJzhmHXkUlmvrNufdi_oPewS5m5LG-lHhY0/">Cricket</a></strong><ul><li>Played in several national tournaments for <strong>U-14</strong> & <strong>U-16</strong> district team. Was the openning batsman for the <a href="https://www.instagram.com/p/BfcczJEFjS1AWTAuIfpCfhZhgPXbHPZAMO-PNc0/">high school cricket team</a> as well!</li></ul></li>
 
-          <li><strong><a href="https://www.instagram.com/p/BnoFY8PlMBJp92XeT25sQLwhEhwz3JF_LLm9780/">Quizzing</a></strong><ul><li>Played for high school quizzing team. Co-founded a Quizzing platform named <strong>Quizbees</strong> to promote quizzing and organize quiz festivals!</li></ul></li>
+          <li><strong>Quizzing</strong><ul><li>Played for <a href="https://www.instagram.com/p/BnoFY8PlMBJp92XeT25sQLwhEhwz3JF_LLm9780/">high school quizzing team</a>. Co-founded a Quizzing platform named <strong>Quizbees</strong> to promote quizzing and organize quiz festivals!</li></ul></li>
 
           <li><strong>Volunteering</strong><ul><li>Volunteer of <strong><a href="https://www.facebook.com/PurnotaFoundation">Purnota Foundation</a></strong>. We are a charity organization to help the underpriviledged people of our society!</li></ul></li>
           <li><strong>Reading Books</strong><ul><li>I am a big fan of the Harry Potter Series. I mostly like to read Thriller Books, but I also love Muhammad Zafor Iqbal Sir's science fiction Books. To see the list of my favourite books <a href="Books.html"><strong>Click here</strong></a></li></ul></li>
